fix the сyrillic letter error
Update config-meanwell-drs.json

--- a/templates/config-meanwell-drs.json
+++ b/templates/config-meanwell-drs.json
@@ -105,8 +105,8 @@
                 "group": "settings"
             },
             {
-                "title": "battary_low_voltage_setpoint",
-                "id": "battary_low_voltage_setpoint",
+                "title": "battery_low_voltage_setpoint",
+                "id": "battery_low_voltage_setpoint",
                 "address": 208,
                 "reg_type": "holding",
                 "default": 20.9,
@@ -118,8 +118,8 @@
                 "group": "settings"
             },
             {
-                "title": "battary_critical_voltage_setpoint",
-                "id": "battary_critical_voltage_setpoint",
+                "title": "battery_critical_voltage_setpoint",
+                "id": "battery_critical_voltage_setpoint",
                 "address": 209,
                 "reg_type": "holding",
                 "default": 16.8,
@@ -291,8 +291,8 @@
                 ],
                 "enum_titles": [
                     "Undefined",
-                    "Сonstant Сurrent",
-                    "Сonstant Voltage",
+                    "Constant Current",
+                    "Constant Voltage",
                     "Float Mode"
                 ],
                 "readonly": true,
@@ -539,15 +539,15 @@
                 "charging_voltage_setpoint": "Charging Voltage Setpoint (V)",
                 "floating_voltage_setpoint": "Floating Voltage Setpoint (V)",
                 "taper_current_setpoint": "Taper Current Setpoint (A)",
-                "battary_low_voltage_setpoint": "Battary Low Voltage Setpoint (V)",
-                "battary_critical_voltage_setpoint": "Battary Critical Voltage Setpoint (V)",
+                "battery_low_voltage_setpoint": "Battery Low Voltage Setpoint (V)",
+                "battery_critical_voltage_setpoint": "Battery Critical Voltage Setpoint (V)",
                 "charging_current_timeout": "Charging Current Timeout (Min)",
                 "charging_voltage_timeout": "Charging Voltage Timeout (Min)",
                 "floating_voltage_timeout": "Floating Voltage Timeout (Min)",
                 "battery_self_test": "Battery Self-Test",
                 "voltage_ac": "Voltage AC",
                 "voltage_dc": "Voltage DC",
-                "current_dc": "Сurrent DC",
+                "current_dc": "Current DC",
                 "battery_voltage": "Battery Voltage",
                 "battery_current": "Battery Сurrent",
                 "battery_detect": "Battery Detect",
@@ -583,8 +583,8 @@
                 "charging_voltage_setpoint": "Уставка напряжения заряда (В)",
                 "floating_voltage_setpoint": "Уставка напряжения поддержания заряда (В)",
                 "taper_current_setpoint": "Уставка токоограничения заряда (А)",
-                "battary_low_voltage_setpoint": "Уставка низкого напряжения батареи (В)",
-                "battary_critical_voltage_setpoint": "Уставка защитного напряжения батареи (В)",
+                "battery_low_voltage_setpoint": "Уставка низкого напряжения батареи (В)",
+                "battery_critical_voltage_setpoint": "Уставка защитного напряжения батареи (В)",
                 "charging_current_timeout": "Таймаут тока заряда (мин)",
                 "charging_voltage_timeout": "Таймаут напряжения заряда (мин)",
                 "floating_voltage_timeout": "Таймаут напряжения поддержания заряда (мин)",
