--- a/templates/config-map6s-fw2.json
+++ b/templates/config-map6s-fw2.json
@@ -275,7 +275,8 @@
                 "name": "Irms 1",
                 "reg_type": "input",
                 "address": "0x141a",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -285,7 +286,8 @@
                 "name": "Ipeak 1",
                 "reg_type": "input",
                 "address": "0x181c",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -296,7 +298,7 @@
                 "name": "P 1",
                 "reg_type": "input",
                 "address": "0x1306",
-                "type": "power",
+                "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -336,7 +338,7 @@
                 "name": "AP energy 1",
                 "reg_type": "input",
                 "address": "0x120c",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -347,7 +349,7 @@
                 "name": "AN energy 1",
                 "reg_type": "input",
                 "address": "0x121c",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -390,7 +392,8 @@
                 "name": "Irms 2",
                 "reg_type": "input",
                 "address": "0x1418",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -400,7 +403,8 @@
                 "name": "Ipeak 2",
                 "reg_type": "input",
                 "address": "0x181a",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -411,7 +415,7 @@
                 "name": "P 2",
                 "reg_type": "input",
                 "address": "0x1304",
-                "type": "power",
+                "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -451,7 +455,7 @@
                 "name": "AP energy 2",
                 "reg_type": "input",
                 "address": "0x1208",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -462,7 +466,7 @@
                 "name": "AN energy 2",
                 "reg_type": "input",
                 "address": "0x1218",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -505,7 +509,8 @@
                 "name": "Irms 3",
                 "reg_type": "input",
                 "address": "0x1416",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -515,7 +520,8 @@
                 "name": "Ipeak 3",
                 "reg_type": "input",
                 "address": "0x1818",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -526,7 +532,7 @@
                 "name": "P 3",
                 "reg_type": "input",
                 "address": "0x1302",
-                "type": "power",
+                "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -566,7 +572,7 @@
                 "name": "AP energy 3",
                 "reg_type": "input",
                 "address": "0x1204",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -577,7 +583,7 @@
                 "name": "AN energy 3",
                 "reg_type": "input",
                 "address": "0x1214",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -620,7 +626,8 @@
                 "name": "Irms 4",
                 "reg_type": "input",
                 "address": "0x241a",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -630,7 +637,8 @@
                 "name": "Ipeak 4",
                 "reg_type": "input",
                 "address": "0x281c",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -641,7 +649,7 @@
                 "name": "P 4",
                 "reg_type": "input",
                 "address": "0x2306",
-                "type": "power",
+                "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -681,7 +689,7 @@
                 "name": "AP energy 4",
                 "reg_type": "input",
                 "address": "0x220c",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -692,7 +700,7 @@
                 "name": "AN energy 4",
                 "reg_type": "input",
                 "address": "0x221c",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -735,7 +743,8 @@
                 "name": "Irms 5",
                 "reg_type": "input",
                 "address": "0x2418",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -745,7 +754,8 @@
                 "name": "Ipeak 5",
                 "reg_type": "input",
                 "address": "0x281a",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -756,7 +766,7 @@
                 "name": "P 5",
                 "reg_type": "input",
                 "address": "0x2304",
-                "type": "power",
+                "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -796,7 +806,7 @@
                 "name": "AP energy 5",
                 "reg_type": "input",
                 "address": "0x2208",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -807,7 +817,7 @@
                 "name": "AN energy 5",
                 "reg_type": "input",
                 "address": "0x2218",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -850,7 +860,8 @@
                 "name": "Irms 6",
                 "reg_type": "input",
                 "address": "0x2416",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -860,7 +871,8 @@
                 "name": "Ipeak 6",
                 "reg_type": "input",
                 "address": "0x2818",
-                "type": "current",
+                "type": "value",
+                "units": "I",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -871,7 +883,7 @@
                 "name": "P 6",
                 "reg_type": "input",
                 "address": "0x2302",
-                "type": "power",
+                "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -911,7 +923,7 @@
                 "name": "AP energy 6",
                 "reg_type": "input",
                 "address": "0x2204",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -922,7 +934,7 @@
                 "name": "AN energy 6",
                 "reg_type": "input",
                 "address": "0x2214",
-                "type": "power_consumption",
+                "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -965,7 +977,8 @@
                 "name": "Urms",
                 "reg_type": "input",
                 "address": "0x10d9",
-                "type": "voltage",
+                "type": "value",
+                "units": "V",
                 "semi-sporadic": true,
                 "format": "u16",
                 "scale": 0.01,
@@ -976,7 +989,8 @@
                 "name": "Upeak",
                 "reg_type": "input",
                 "address": "0x1810",
-                "type": "voltage",
+                "type": "value",
+                "units": "V",
                 "format": "s32",
                 "scale": 0.01,
                 "round_to": 0.01,
@@ -1017,7 +1031,8 @@
                 "name": "Supply voltage",
                 "reg_type": "input",
                 "address": 121,
-                "type": "voltage",
+                "type": "value",
+                "units": "V",
                 "scale": 0.001,
                 "enabled": false,
                 "group": "hw_info"
@@ -1046,7 +1061,8 @@
                 "reg_type": "input",
                 "address": 123,
                 "scale": 0.001,
-                "type": "voltage",
+                "type": "value",
+                "units": "V",
                 "enabled": false,
                 "group": "hw_info"
             }
