--- a/templates/config-map6s-fw2.json
+++ b/templates/config-map6s-fw2.json
@@ -275,8 +275,7 @@
                 "name": "Irms 1",
                 "reg_type": "input",
                 "address": "0x141a",
-                "type": "value",
-                "units": "I",
+                "type": "current",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -287,7 +286,7 @@
                 "reg_type": "input",
                 "address": "0x181c",
                 "type": "value",
-                "units": "I",
+                "units": "A",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -298,7 +297,7 @@
                 "name": "P 1",
                 "reg_type": "input",
                 "address": "0x1306",
-                "type": "value",
+                "type": "power",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -338,7 +337,7 @@
                 "name": "AP energy 1",
                 "reg_type": "input",
                 "address": "0x120c",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -349,7 +348,7 @@
                 "name": "AN energy 1",
                 "reg_type": "input",
                 "address": "0x121c",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -392,8 +391,7 @@
                 "name": "Irms 2",
                 "reg_type": "input",
                 "address": "0x1418",
-                "type": "value",
-                "units": "I",
+                "type": "current",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -404,7 +402,7 @@
                 "reg_type": "input",
                 "address": "0x181a",
                 "type": "value",
-                "units": "I",
+                "units": "A",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -415,7 +413,7 @@
                 "name": "P 2",
                 "reg_type": "input",
                 "address": "0x1304",
-                "type": "value",
+                "type": "power",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -455,7 +453,7 @@
                 "name": "AP energy 2",
                 "reg_type": "input",
                 "address": "0x1208",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -466,7 +464,7 @@
                 "name": "AN energy 2",
                 "reg_type": "input",
                 "address": "0x1218",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -509,8 +507,7 @@
                 "name": "Irms 3",
                 "reg_type": "input",
                 "address": "0x1416",
-                "type": "value",
-                "units": "I",
+                "type": "current",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -521,7 +518,7 @@
                 "reg_type": "input",
                 "address": "0x1818",
                 "type": "value",
-                "units": "I",
+                "units": "A",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -532,7 +529,7 @@
                 "name": "P 3",
                 "reg_type": "input",
                 "address": "0x1302",
-                "type": "value",
+                "type": "power",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -572,7 +569,7 @@
                 "name": "AP energy 3",
                 "reg_type": "input",
                 "address": "0x1204",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -583,7 +580,7 @@
                 "name": "AN energy 3",
                 "reg_type": "input",
                 "address": "0x1214",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -626,8 +623,7 @@
                 "name": "Irms 4",
                 "reg_type": "input",
                 "address": "0x241a",
-                "type": "value",
-                "units": "I",
+                "type": "current",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -638,7 +634,7 @@
                 "reg_type": "input",
                 "address": "0x281c",
                 "type": "value",
-                "units": "I",
+                "units": "A",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -649,7 +645,7 @@
                 "name": "P 4",
                 "reg_type": "input",
                 "address": "0x2306",
-                "type": "value",
+                "type": "power",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -689,7 +685,7 @@
                 "name": "AP energy 4",
                 "reg_type": "input",
                 "address": "0x220c",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -700,7 +696,7 @@
                 "name": "AN energy 4",
                 "reg_type": "input",
                 "address": "0x221c",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -743,8 +739,7 @@
                 "name": "Irms 5",
                 "reg_type": "input",
                 "address": "0x2418",
-                "type": "value",
-                "units": "I",
+                "type": "current",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -755,7 +750,7 @@
                 "reg_type": "input",
                 "address": "0x281a",
                 "type": "value",
-                "units": "I",
+                "units": "A",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -766,7 +761,7 @@
                 "name": "P 5",
                 "reg_type": "input",
                 "address": "0x2304",
-                "type": "value",
+                "type": "power",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -806,7 +801,7 @@
                 "name": "AP energy 5",
                 "reg_type": "input",
                 "address": "0x2208",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -817,7 +812,7 @@
                 "name": "AN energy 5",
                 "reg_type": "input",
                 "address": "0x2218",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -860,8 +855,7 @@
                 "name": "Irms 6",
                 "reg_type": "input",
                 "address": "0x2416",
-                "type": "value",
-                "units": "I",
+                "type": "current",
                 "format": "u32",
                 "scale": 2.44141e-7,
                 "round_to": 0.0001,
@@ -872,7 +866,7 @@
                 "reg_type": "input",
                 "address": "0x2818",
                 "type": "value",
-                "units": "I",
+                "units": "A",
                 "format": "s32",
                 "scale": 0.016,
                 "round_to": 0.01,
@@ -883,7 +877,7 @@
                 "name": "P 6",
                 "reg_type": "input",
                 "address": "0x2302",
-                "type": "value",
+                "type": "power",
                 "format": "s32",
                 "scale": 0.000244141,
                 "round_to": 0.01,
@@ -923,7 +917,7 @@
                 "name": "AP energy 6",
                 "reg_type": "input",
                 "address": "0x2204",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -934,7 +928,7 @@
                 "name": "AN energy 6",
                 "reg_type": "input",
                 "address": "0x2214",
-                "type": "value",
+                "type": "power_consumption",
                 "format": "u64",
                 "scale": 1e-5,
                 "round_to": 1e-6,
@@ -977,8 +971,7 @@
                 "name": "Urms",
                 "reg_type": "input",
                 "address": "0x10d9",
-                "type": "value",
-                "units": "V",
+                "type": "voltage",
                 "semi-sporadic": true,
                 "format": "u16",
                 "scale": 0.01,
@@ -1031,8 +1024,7 @@
                 "name": "Supply voltage",
                 "reg_type": "input",
                 "address": 121,
-                "type": "value",
-                "units": "V",
+                "type": "voltage",
                 "scale": 0.001,
                 "enabled": false,
                 "group": "hw_info"
@@ -1061,8 +1053,7 @@
                 "reg_type": "input",
                 "address": 123,
                 "scale": 0.001,
-                "type": "value",
-                "units": "V",
+                "type": "voltage",
                 "enabled": false,
                 "group": "hw_info"
             }
