--- a/templates/config-map6s-fw2.json
+++ b/templates/config-map6s-fw2.json
@@ -971,7 +971,8 @@
                 "name": "Urms",
                 "reg_type": "input",
                 "address": "0x10d9",
-                "type": "voltage",
+                "type": "value",
+                "units": "V",
                 "semi-sporadic": true,
                 "format": "u16",
                 "scale": 0.01,
